test/Fail/Issue4323.err
Issue4323.agda:28.27-28: error: [UnequalTerms]
The terms
  m + n
and
  n
are not equal at type Nat
when checking that the expression q has type Q (m + n)
